# tauri-sharp

./: .gitignore  README.md  package-lock.json  package.json
protos/: greet.proto
src/: App.css  App.tsx
src-csharp/: Initialization.cs  Program.cs  TauriSharp.csproj  TauriSharp.sln
src-csharp/Properties/: launchSettings.json
src-csharp/Services/: GreeterService.cs
src-csharp/Utils/: ProgramArgs.cs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: connection.rs  init.rs  lib.rs  main.rs  proto.rs
